# arch-labs

./: CMakeLists.txt
libs/: CMakeLists.txt
libs/include/: matrix.h  matrix.hpp  microtime.h
libs/src/: matrix.c  matrix.cpp  microtime.c
task_1/: CMakeLists.txt  task_1.c  task_1.cpp
task_2/: CMakeLists.txt  task_2.cpp
task_3/: CMakeLists.txt  task_3.cpp  task_3_bm.cpp  task_3_lib.cpp
task_4/: CMakeLists.txt  task_4.cpp  task_4_bm.cpp  task_4_lib.cpp
task_5/: CMakeLists.txt  task_5.cpp
